[project]
name = "brazil-sdg-progress-radar"
version = "0.1.0"
description = "Sustainable Development Goals radar chart lab comparing normalized regional indicators."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alberto Mateus P. da Gama" }]

[tool.pytest.ini_options]
pythonpath = ["."]
